apps/overlays/production/nginx/increase_replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: org
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    spec:
      containers:
      - name: application
        resources:
          requests:
            memory: 128Mi
            cpu: 100m
          limits:
            memory: "254Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
           path: /
           port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 5
          periodSeconds: 30
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 5
          periodSeconds: 30
          successThreshold: 1
          failureThreshold: 3
