apps/overlays/production/nginx/port_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: org
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
