apps/overlays/production/nginx/alb.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: org-alb-argodemo
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-2016-08
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ap-south-1:***************:certificate/***************"
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/group.name: prod-k8-test
    #alb.ingress.kubernetes.io/load-balancer-attributes: deletion_protection.enabled=true
    alb.ingress.kubernetes.io/tags: Environment=demo,app=nginx
spec:
  rules:
  - host: nginx-argodemo.organization.com
    http:
      paths:
        - backend:
            serviceName: ssl-redirect
            servicePort: use-annotation
  - host: nginx-argodemo.organization.com
    http:
      paths:
        - backend:
            serviceName: production-nginx-argodemo-org
            servicePort: 80
